Updated background color
used a complementory colour scheme

--- a/complementary.html
+++ b/complementary.html
@@ -65,7 +65,7 @@
             width: 80%;
             max-width: 1200px;
             margin: 0 auto;
-            background-color: #e4e4e4;
+            background-color: #090075;
         }
         header{
             width:100%;
