--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>A Colourful Site</h1>
+            <h1> Elie Byamungu</h1>
         </header>
         <nav>
             <ul>
