--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
         </header>
         <nav>
             <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
+                <li><a href="https://byam0003.github/colours/monochromatic.html#">Link 1</a></li>
+                <li><a href="https://byam0003.github/colours/complementary.html#">Link 2</a></li>
+                <li><a href="https://byam0003.github/colours/analogous.html#">Link 3</a></li>
                 <li><a href="#">Link 4</a></li>
                 <li><a href="#">Link 5</a></li>
             </ul>
