--- a/analogous.html
+++ b/analogous.html
@@ -98,9 +98,9 @@
         </header>
         <nav>
             <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
+                <li><a href="monochromatic.html">Link 1</a></li>
+                <li><a href="complementary.html">Link 2</a></li>
+                <li><a href="analogous">Link 3</a></li>
                 <li><a href="#">Link 4</a></li>
                 <li><a href="#">Link 5</a></li>
             </ul>
