--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             font-family: Helvetica, Arial, sans-serif;
         }
         html,body{
-            background-color: #CC222C;  
+            background-color: #007F00; 
         }
         h1{
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
