--- a/analogous.html
+++ b/analogous.html
@@ -24,7 +24,7 @@
             font-family: Helvetica, Arial, sans-serif;
         }
         html,body{
-            background-color: #0065E8;
+            background-color: #7615FF;
         }
         h1{
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
