--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
                 <li><a href="complementary.html">Link 2</a></li>
                 <li><a href="analogous.html">Link 3</a></li>
                 <li><a href="#">Link 4</a></li>
-                <li><a href="#">Link 5</a></li>
-            </ul>
+                <li><a href="#">Link 5</a></li>            </ul>
         </nav>
         <main>
             <h2>Some Important Content</h2>
