--- a/analogous.html
+++ b/analogous.html
@@ -100,9 +100,9 @@
             <ul>
                 <li><a href="monochromatic.html">Link 1</a></li>
                 <li><a href="complementary.html">Link 2</a></li>
-                <li><a href="analogous">Link 3</a></li>
+                <li><a href="analogous.html">Link 3</a></li>
                 <li><a href="#">Link 4</a></li>
-                <li><a href="#">Link 5</a></li>
+                <li><a href="#">Link 5</a></li>          
             </ul>
         </nav>
         <main>
