--- a/index.html
+++ b/index.html
@@ -94,15 +94,16 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1> Elie Byamungu</h1>
+            <h1>Elie Byamungu</h1>
         </header>
         <nav>
             <ul>
-                <li><a href="monochromatic.html">Link 1</a></li>
-                <li><a href="complementary.html">Link 2</a></li>
-                <li><a href="analogous.html">Link 3</a></li>
+                <li><a href="monochromatic.html"> Monochromatic(Link 1)</a></li>
+                <li><a href="complementary.html">Complementary(Link 2)</a></li>
+                <li><a href="analogous.html"> Analogous(Link 3)</a></li>
                 <li><a href="#">Link 4</a></li>
-                <li><a href="#">Link 5</a></li>            </ul>
+                <li><a href="#">Link 5</a></li>            
+            </ul>
         </nav>
         <main>
             <h2>Some Important Content</h2>
