--- a/complementary.html
+++ b/complementary.html
@@ -98,11 +98,11 @@
         </header>
         <nav>
             <ul>
-                <li><a href="monochromatic.html">Link 1</a></li>
-                <li><a href="complementary.html">Link 2</a></li>
-                <li><a href="analogous.html">Link 3</a></li>
+            <li><a href="monochromatic.html"> Monochromatic(Link 1)</a></li>
+                <li><a href="complementary.html">Complementary(Link 2)</a></li>
+                <li><a href="analogous.html"> Analogous(Link 3)</a></li>
                 <li><a href="#">Link 4</a></li>
-                <li><a href="#">Link 5</a></li>
+                <li><a href="#">Link 5</a></li>  
             </ul>
         </nav>
         <main>
