--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
             font-size: 1.414rem;
             padding:0.5rem 2rem;
         }
+        main {
+            background-color: cornflowerblue;
+        }
         main p:last-child{
             padding-bottom: 4rem;
         }
