--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             padding:0.5rem 2rem;
         }
         main {
-            background-color: cornflowerblue;
+            background-color: red;
         }
         main p:last-child{
             padding-bottom: 4rem;
@@ -68,7 +68,7 @@
             width: 80%;
             max-width: 1200px;
             margin: 0 auto;
-            background-color: #e4e4e4;
+            background-color: red;
         }
         header{
             width:100%;
