--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </header>
         <nav>
              <ul>
-            <li><a href="monochromatic.html"> Monochromatic(Link 1)</a></li>
+            <li><a href="index.html"> Monochromatic(Link 1)</a></li>
                 <li><a href="complementary.html">Complementary(Link 2)</a></li>
                 <li><a href="analogous.html"> Analogous(Link 3)</a></li>
                 <li><a href="#">Link 4</a></li>
