--- a/complementary.html
+++ b/complementary.html
@@ -65,7 +65,7 @@
             width: 80%;
             max-width: 1200px;
             margin: 0 auto;
-            background-color: #CDD76A;
+            background-color: #800080;
         }
         header{
             width:100%;
