--- a/analogous.html
+++ b/analogous.html
@@ -65,7 +65,7 @@
             width: 80%;
             max-width: 1200px;
             margin: 0 auto;
-            background-color: #e4e4e4;
+            background-color: #19A4B5;
         }
         header{
             width:100%;
@@ -94,7 +94,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>A Colourful Site</h1>
+            <h1> Elie Byamungu</h1>
         </header>
         <nav>
               <ul>
