--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             width: 80%;
             max-width: 1200px;
             margin: 0 auto;
-            background-color: red;
+            background-color: #2EEDFF;
         }
         header{
             width:100%;
