--- a/analogous.html
+++ b/analogous.html
@@ -65,7 +65,7 @@
             width: 80%;
             max-width: 1200px;
             margin: 0 auto;
-            background-color: #1CB519;
+            background-color: #B80798;
         }
         header{
             width:100%;
