--- a/analogous.html
+++ b/analogous.html
@@ -57,7 +57,7 @@
         p{
             font-size: 1.414rem;
             padding:0.5rem 2rem;
-            color: #ffc4cd 
+            color: #ffc4cd;
         }
         main p:last-child{
             padding-bottom: 4rem;
