--- a/analogous.html
+++ b/analogous.html
@@ -71,7 +71,7 @@
         }
         header{
             width:100%;
-            border-bottom: 1rem solid black;
+            border-bottom: 1rem solid purple;
         }
         nav{
             float:left;
@@ -84,7 +84,7 @@
         footer{
             clear:both;
             width: 100%;
-            border-top: 0.5rem solid black;
+            border-top: 0.5rem solid purple;
         }
         footer p{
             font-size: 1rem;
