--- a/analogous.html
+++ b/analogous.html
@@ -30,7 +30,8 @@
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
             font-size: 3.998rem;
             padding:1rem 2rem;
-            color: #fff0f2; 
+            color: #fff0f2;
+            background: #FFB6C1;
         }
         h2{
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
