--- a/analogous.html
+++ b/analogous.html
@@ -31,7 +31,7 @@
             font-size: 3.998rem;
             padding:1rem 2rem;
             color: #fff0f2;
-            background: #FFB6C1;
+            background: #FF0048;
         }
         h2{
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
