--- a/analogous.html
+++ b/analogous.html
@@ -37,6 +37,7 @@
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
             font-size: 2.827rem;
             padding:1rem 2rem;
+            color: #F77190;
         }
         nav ul{
             padding:1rem 0;
