--- a/analogous.html
+++ b/analogous.html
@@ -51,7 +51,7 @@
             text-decoration: none;
             border-bottom: 0.2rem solid black;
             padding: 0.2rem 2rem;
-            color: #B404AE;
+            color: #FF1E3F;
         }
         nav li>a:hover,
         nav li>a:active{
