--- a/analogous.html
+++ b/analogous.html
@@ -51,7 +51,7 @@
             text-decoration: none;
             border-bottom: 0.2rem solid black;
             padding: 0.2rem 2rem;
-            color: #ff3452;
+            color: #ff5c74;
         }
         nav li>a:hover,
         nav li>a:active{
