--- a/complementary.html
+++ b/complementary.html
@@ -24,7 +24,7 @@
             font-family: Helvetica, Arial, sans-serif;
         }
         html,body{
-            background-color: #CDD76A;
+            background-color: #DBFF6A;
         }
         h1{
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
