--- a/complementary.html
+++ b/complementary.html
@@ -30,7 +30,7 @@
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
             font-size: 3.998rem;
             padding:1rem 2rem;
-            color: C1FF00;
+            color: #C1FF00;
         }
         h2{
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
