--- a/complementary.html
+++ b/complementary.html
@@ -36,6 +36,7 @@
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
             font-size: 2.827rem;
             padding:1rem 2rem;
+            color: #7900B2;
         }
         nav ul{
             padding:1rem 0;
