--- a/complementary.html
+++ b/complementary.html
@@ -59,6 +59,7 @@
         p{
             font-size: 1.414rem;
             padding:0.5rem 2rem;
+            color: #AE00FF;
         }
         main p:last-child{
             padding-bottom: 4rem;
