--- a/complementary.html
+++ b/complementary.html
@@ -50,7 +50,7 @@
             text-decoration: none;
             border-bottom: 0.2rem solid black;
             padding: 0.2rem 2rem;
-            color: #999;
+            color: #6A0888;
         }
         nav li>a:hover,
         nav li>a:active{
