--- a/complementary.html
+++ b/complementary.html
@@ -72,7 +72,7 @@
         }
         header{
             width:100%;
-            border-bottom: 1rem solid black;
+            border-bottom: 1rem solid #7900B2;
         }
         nav{
             float:left;
