--- a/complementary.html
+++ b/complementary.html
@@ -90,7 +90,7 @@
         footer p{
             font-size: 1rem;
             padding: 2rem;
-            color: #666;
+            color: #87B200;
         }
     </style>
 </head>
