--- a/complementary.html
+++ b/complementary.html
@@ -54,7 +54,7 @@
         }
         nav li>a:hover,
         nav li>a:active{
-            color: #222;
+            color: #DBFF6A;
         }
         p{
             font-size: 1.414rem;
