--- a/complementary.html
+++ b/complementary.html
@@ -85,7 +85,7 @@
         footer{
             clear:both;
             width: 100%;
-            border-top: 0.5rem solid black;
+            border-top: 0.5rem solid #7900B2;
         }
         footer p{
             font-size: 1rem;
