--- a/complementary.html
+++ b/complementary.html
@@ -48,7 +48,7 @@
         nav li>a{
             display: block;
             text-decoration: none;
-            border-bottom: 0.2rem solid black;
+            border-bottom: 0.2rem solid #C1FF00;
             padding: 0.2rem 2rem;
             color: #6A0888;
         }
