--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
             font-size: 3.998rem;
             padding:1rem 2rem;
+            color: #FFA08B;
         }
         h2{
             font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
@@ -50,7 +51,7 @@
             padding: 0.2rem 2rem;
             color: #999;
         }
-        nav li>a:hover,
+        nav li>a:hover,d
         nav li>a:active{
             color: #222;
         }
