--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         }
         header{
             width:100%;
-            border-bottom: 1rem solid black;
+            border-bottom: 1rem solid #7F1700;
         }
         nav{
             float:left;
@@ -87,7 +87,7 @@
         footer{
             clear:both;
             width: 100%;
-            border-top: 0.5rem solid black;
+            border-top: 0.5rem solid #7F1700;
         }
         footer p{
             font-size: 1rem;
