--- a/index.html
+++ b/index.html
@@ -50,18 +50,18 @@
             text-decoration: none;
             border-bottom: 0.2rem solid black;
             padding: 0.2rem 2rem;
-            color: #999;
+            color: #7F3726;
         }
         nav li>a:hover,d
         nav li>a:active{
-            color: #222;
+            color: #7F3726;
         }
         p{
             font-size: 1.414rem;
             padding:0.5rem 2rem;
         }
         main {
-            background-color: red;
+            background-color: #FF2F00;
         }
         main p:last-child{
             padding-bottom: 4rem;
