--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         p{
             font-size: 1.414rem;
             padding:0.5rem 2rem;
+            color: #FFA08B;
         }
         main {
             background-color: #FF2F00;
