--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         }
         nav li>a:hover,d
         nav li>a:active{
-            color: #7F3726;
+            color: #CC2600;
         }
         p{
             font-size: 1.414rem;
