--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         nav li{
             font-size: 1.999rem;
             list-style-type: none;
+            color: #FFA08B;
         }
         nav li>a{
             display: block;
